--- a/css/custom.css
+++ b/css/custom.css
@@ -47,7 +47,7 @@ section.main{
 
 .about img{
     width: 90%;
-    aspect-ratio: 7/9;
+    aspect-ratio: 9/16;
     object-fit: cover;
     -webkit-box-shadow: 5px 5px 14px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 5px 5px 14px -1px rgba(0,0,0,0.75);
@@ -57,7 +57,7 @@ section.main{
 .about h1{
     font-size: 5rem;
     font-weight: 900;
-    color: red;
+    color: rgb(255, 0, 0);
 }
 
 .about p{
@@ -73,3 +73,4 @@ section.main{
 .move-up{
     margin: -20px;
 }
+
